Color contrast fix for  Sustainability rating popup(accessibility fix)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@82585 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
+++ b/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
@@ -975,3 +975,9 @@ color: #B93D3F;
 .assistive-mode section.main .breadcrumbs{
 	color:#333;
 }
+.assistive-mode .nav li{
+	background-color: #098A1E;
+}
+.assistive-mode .nav a:focus{
+	background-color: #AF3D08 !important;
+}
